--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -2,8 +2,8 @@
     <head>
         <title>Warehouse In Out system</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link href="../css/style.css" rel="stylesheet" type="text/css">
-        <script src="../js/darkMode.js"></script>
+        <link href="/css/style.css" rel="stylesheet" type="text/css">
+        <script src="/js/darkMode.js"></script>
         
     </head>
     <body class="darkmode">
